--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
     "dotenv": "^8.2.0",
     "next": "^9.4.2",
     "react": "^16.13.1",
