--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "next": "^9.4.2",
     "react": "^16.13.1",
