--- a/api/package.json
+++ b/api/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "aws-sdk": "^2.683.0",
     "axios": "^0.19.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^51.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "request": "^2.88.2",
     "slugify": "^1.4.0"
