--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "next": "^9.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
