--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "next": "^9.4.2",
