--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
