--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "request": "^2.88.2",
-    "slugify": "^1.4.0"
+    "slugify": "^1.4.0",
+    "socketio": "^1.0.0"
   }
 }
