set ws with jwt verification

--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "mobx-react": "^6.2.2",
     "next": "^9.4.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "socket.io-client": "^2.3.0"
   }
 }
