--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.16.3",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
