--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@brainhubeu/react-carousel": "^1.16.3",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "axios": "^0.19.2",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
