--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-masonry-css": "^1.0.14",
     "react-uuid": "^1.0.2",
     "socket.io-client": "^2.3.0",
     "uuid": "^8.1.0"
